New pictures for local source

--- a/SYGalleryExample/SYGalleryExample/en.lproj/MainStoryboard.storyboard
+++ b/SYGalleryExample/SYGalleryExample/en.lproj/MainStoryboard.storyboard
@@ -9,16 +9,16 @@
             <objects>
                 <viewController id="2" customClass="SYViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="Mkw-g6-hBF" customClass="SYGalleryThumbView">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="352"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="440"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <segmentedControl contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="KVx-vr-oPA">
-                                <rect key="frame" x="10" y="363" width="300" height="44"/>
+                                <rect key="frame" x="10" y="451" width="300" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <segments>
                                     <segment title="Local"/>
@@ -31,15 +31,43 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="SYGallery" id="cqa-tp-ELy"/>
+                    <navigationItem key="navigationItem" title="SYGallery" id="cqa-tp-ELy">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="s8Z-bV-QKv">
+                            <connections>
+                                <segue destination="J6x-Sg-hEr" kind="push" id="h18-HZ-fle"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="segmentedControl" destination="KVx-vr-oPA" id="G74-Me-Lcs"/>
                         <outlet property="thumbsView" destination="Mkw-g6-hBF" id="oFQ-9V-zYA"/>
+                        <segue destination="J6x-Sg-hEr" kind="push" id="bpb-q1-5F6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="370" y="217"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="edC-VN-0Cp">
+            <objects>
+                <viewController id="J6x-Sg-hEr" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="s2y-hp-sMB">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" id="C9M-V8-xEr">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="9E8-vw-eXm"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JRO-0N-2LA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="828" y="217"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7ZB-gK-tkb">
@@ -73,6 +101,9 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="h18-HZ-fle"/>
+    </inferredMetricsTieBreakers>
 </document>
