--- a/SYGalleryExample/SYGalleryExample/en.lproj/MainStoryboard.storyboard
+++ b/SYGalleryExample/SYGalleryExample/en.lproj/MainStoryboard.storyboard
@@ -22,16 +22,22 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="2if-xu-ZxI"/>
-                                    <barButtonItem title="Local pictures" id="VUY-wX-4JF">
+                                    <barButtonItem title="Local" id="VUY-wX-4JF">
                                         <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <action selector="buttonLocalPicsClick:" destination="2" id="QWa-jY-KzP"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="I5N-mU-emM"/>
-                                    <barButtonItem title="Distant pictures" id="Xeq-r1-STl">
+                                    <barButtonItem title="Distant" id="Xeq-r1-STl">
                                         <connections>
                                             <action selector="buttonDistPicsClick:" destination="2" id="hdY-5L-CM0"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="KtF-Nn-JlA"/>
+                                    <barButtonItem title="Data" id="fxX-JV-xwx">
+                                        <connections>
+                                            <action selector="buttonDataClick:" destination="2" id="ilN-UD-4s5"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="ZSe-ix-X0X"/>
@@ -59,6 +65,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="buttonData" destination="fxX-JV-xwx" id="8WC-6d-Cnx"/>
                         <outlet property="buttonDistantPics" destination="Xeq-r1-STl" id="CIF-rT-eUN"/>
                         <outlet property="buttonLocalPics" destination="VUY-wX-4JF" id="526-ad-5vW"/>
                         <outlet property="buttonText" destination="wXq-Ov-CrQ" id="y1X-Yy-abI"/>
@@ -127,12 +134,15 @@
         <class className="SYViewControllerThumbs" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/SYViewControllerThumbs.h"/>
             <relationships>
+                <relationship kind="action" name="buttonDataClick:"/>
                 <relationship kind="action" name="buttonDistPicsClick:"/>
                 <relationship kind="action" name="buttonLocalPicsClick:"/>
                 <relationship kind="action" name="buttonTextClick:"/>
                 <relationship kind="action" name="editButtonClick:"/>
+                <relationship kind="outlet" name="buttonData" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="buttonDistantPics" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="buttonLocalPics" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="buttonText" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="thumbsView" candidateClass="SYGalleryThumbView"/>
             </relationships>
         </class>
