--- a/SYGalleryExample/SYGalleryExample/en.lproj/MainStoryboard.storyboard
+++ b/SYGalleryExample/SYGalleryExample/en.lproj/MainStoryboard.storyboard
@@ -13,49 +13,17 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="Mkw-g6-hBF" customClass="SYGalleryThumbView">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="440"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </view>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="LME-6D-z8s">
-                                <rect key="frame" x="0.0" y="460" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <items>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="2if-xu-ZxI"/>
-                                    <barButtonItem title="Local" id="VUY-wX-4JF">
-                                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <connections>
-                                            <action selector="buttonLocalPicsClick:" destination="2" id="QWa-jY-KzP"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="I5N-mU-emM"/>
-                                    <barButtonItem title="Distant" id="Xeq-r1-STl">
-                                        <connections>
-                                            <action selector="buttonDistPicsClick:" destination="2" id="hdY-5L-CM0"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="KtF-Nn-JlA"/>
-                                    <barButtonItem title="Data" id="fxX-JV-xwx">
-                                        <connections>
-                                            <action selector="buttonDataClick:" destination="2" id="ilN-UD-4s5"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="ZSe-ix-X0X"/>
-                                    <barButtonItem title="Text" id="wXq-Ov-CrQ">
-                                        <connections>
-                                            <action selector="buttonTextClick:" destination="2" id="7CA-eu-Iyl"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="OwW-WG-FYT"/>
-                                </items>
-                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="SYGallery" id="cqa-tp-ELy">
-                        <barButtonItem key="leftBarButtonItem" title="Edit" id="HjR-BK-fzG">
+                        <barButtonItem key="leftBarButtonItem" title="Multiselect OFF" id="HjR-BK-fzG">
                             <connections>
-                                <action selector="editButtonClick:" destination="2" id="tXb-4D-DDN"/>
+                                <action selector="buttonMultiSelectClick:" destination="2" id="off-ed-5Hm"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="All" id="s8Z-bV-QKv">
@@ -65,11 +33,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="buttonData" destination="fxX-JV-xwx" id="8WC-6d-Cnx"/>
-                        <outlet property="buttonDistantPics" destination="Xeq-r1-STl" id="CIF-rT-eUN"/>
-                        <outlet property="buttonEdit" destination="HjR-BK-fzG" id="lzg-QN-ea0"/>
-                        <outlet property="buttonLocalPics" destination="VUY-wX-4JF" id="526-ad-5vW"/>
-                        <outlet property="buttonText" destination="wXq-Ov-CrQ" id="y1X-Yy-abI"/>
+                        <outlet property="buttonMultiSelect" destination="HjR-BK-fzG" id="yCY-ks-34S"/>
                         <outlet property="thumbsView" destination="Mkw-g6-hBF" id="oFQ-9V-zYA"/>
                         <segue destination="J6x-Sg-hEr" kind="push" identifier="segueToFullSizeItem" id="bpb-q1-5F6"/>
                     </connections>
@@ -119,6 +83,29 @@
             <point key="canvasLocation" x="-123" y="217"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="SYGalleryFullView" superclassName="UIScrollView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SYGalleryFullView.h"/>
+        </class>
+        <class className="SYGalleryThumbView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SYGalleryThumbView.h"/>
+        </class>
+        <class className="SYViewControllerFull" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SYViewControllerFull.h"/>
+            <relationships>
+                <relationship kind="outlet" name="fullPicView" candidateClass="SYGalleryFullView"/>
+            </relationships>
+        </class>
+        <class className="SYViewControllerThumbs" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SYViewControllerThumbs.h"/>
+            <relationships>
+                <relationship kind="action" name="buttonMultiSelectClick:"/>
+                <relationship kind="outlet" name="buttonMultiSelect" candidateClass="UIBarButtonItem"/>
+                <relationship kind="outlet" name="thumbsView" candidateClass="SYGalleryThumbView"/>
+                <relationship kind="outlet" name="zou" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
